# HillelBot

./: .gitignore  CMakeLists.txt  HillelBot.sln  Notes.txt  README.md  vcpkg.json
HillelBot/: HillelBot.vcxproj
src/: Config.hxx  HillelBot.vcxproj  HillelBot.vcxproj.filters  Secret.cxx  Secret.hxx  commands.cxx  commands.hxx  main.cpp  main.cxx
